--- a/installtool/build.gradle
+++ b/installtool/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.luffykou:android-common-utils:1.1.3'
 }
